<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<artifactId>gc-core</artifactId>
	<packaging>jar</packaging>
	<name>Sakae Core</name>
	<description>Sakae(PDF出力ライブラリ)のフレームワークです。簡単なフラフィックコンテキストです。</description>
	<url>ttps://github.com/mimidesunya/pdfg2d/gc-core/</url>

	<dependencies>
		<dependency>
			<groupId>commons-collections</groupId>
			<artifactId>commons-collections</artifactId>
			<version>[4.4,)</version>
		</dependency>
		<dependency>
			<groupId>com.github.mimidesunya</groupId>
			<artifactId>zs-resolver</artifactId>
			<version>1.0.0</version>
		</dependency>
		<dependency>
			<groupId>com.github.mimidesunya</groupId>
			<artifactId>zs-font</artifactId>
			<version>1.0.0</version>
		</dependency>
		<dependency>
			<groupId>com.github.mimidesunya</groupId>
			<artifactId>zs-rsr</artifactId>
			<version>1.0.0</version>
		</dependency>
	</dependencies>
	<build>
		<plugins>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.10.1</version>
				<configuration>
					<encoding>UTF-8</encoding>
					<source>1.8</source>
					<target>1.8</target>
					<excludes>
					</excludes>
					<testExcludes>
					</testExcludes>
				</configuration>
			</plugin>
		</plugins>
	</build>
	<reporting>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<configuration>
					<source>1.8</source>
					<encoding>UTF-8</encoding>
					<docencoding>UTF-8</docencoding>
					<charset>UTF-8</charset>
					<links>
						<link>https://docs.oracle.com/javase/jp/8/docs/api/</link>
					</links>
				</configuration>
			</plugin>
		</plugins>
	</reporting>

	<licenses>
		<license>
			<name>Apache 2</name>
			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
			<distribution>repo</distribution>
			<comments>A business-friendly OSS license</comments>
		</license>
	</licenses>
	<organization>
		<name>Zamasoft</name>
		<url>https://zamasoft.net/</url>
	</organization>
	<parent>
		<groupId>com.github.mimidesunya</groupId>
		<artifactId>pdfg2d</artifactId>
		<version>1.0.0</version>
	</parent>
</project>